# win-dev-env

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
scripts/: create-manifest.ps1
test/: CMakeLists.txt
test/cpp/: CMakeLists.txt
test/cpp/src/: main.cpp
test/dot_net/: CMakeLists.txt
